# equal-parts

./: Cargo.toml  README.md
benches/: equal_parts_benchmarks.rs
examples/: into.rs  jobs.rs
src/: lib.rs
src/into/: into_equal_parts.rs  mod.rs  vec.rs
